--- a/network.kv
+++ b/network.kv
@@ -27,7 +27,7 @@
                     id: text_input
                     # foreground_color: [0, 0, 0, 1]
                     background_color: [1, 1, 1, 1]
-                    hint_text: "Number"
+                    hint_text: "Result"
 
             AnchorLayout:
                 BoxLayout:
