--- a/network.kv
+++ b/network.kv
@@ -55,13 +55,13 @@
             orientation: "horizontal"
             AnchorLayout:
                 MDRaisedButton:
-                    text: "Copy \u03c0"
+                    text: "Insert \u03c0"
                     on_release:
                         root.ids.text_input.text += "\u03c0"
 
             AnchorLayout:
                 MDRaisedButton:
-                    text: "Copy \u221a"
+                    text: "Insert \u221a"
                     on_release:
                         root.ids.text_input.text += "\u221a"
 
